# lv2-rs

./: Cargo.toml  install-arm.sh  run.sh  test.sh
.cargo/: config
effect/src/: effect.rs  lib.rs  main.rs  util.rs
lv2-package/: effect.ttl  manifest.ttl
