[package]
name = "effect"
edition = "2018"
version = "0.1.0"

[lib]
crate-type = ["dylib"]
path = "effect/src/lib.rs"

[[bin]]
name="effect"
path = "effect/src/main.rs"

[dependencies]
lv2 = {version = "0.5.1", optional = true, package = "lv2"}
plotters = {version = "^0.2.12", optional = true}
hound =  {version = "3.4.0", optional = true}
rand = "0.5.0"

[features]
plugin = ["lv2"]
plot = ["plotters", "hound"]